--- a/internship.html
+++ b/internship.html
@@ -42,7 +42,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://cbre.referrals.selectminds.com/CBREZccYfj'>Intern - Valuation &amp; Advisory Services - CBRE Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
 <h5><a href='http://newamerica.applytojob.com/apply/5CNdL5tAYu/Fall-2019-Communications-Intern-Paid'>Fall 2019 Communications Intern (Paid) - New America - Career Page</a></h5> 
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shijigroup.join.com/jobs/252054-sales-operations-intern-m-f-for-students-only'>Job @ Shiji (Berlin): Sales Operations Intern (m/f... | JOIN</a></h5> 
+<h5><a href='https://shijigroup.join.com/jobs/252054-sales-operations-intern-m-f-for-students-only'>Job @ Shiji (Berlin): Sales Operations Intern (m/f... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -91,7 +91,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/kayak/jobs/4369305002'>Job Application for Intern at KAYAK</a></h5> 
+<h5><a href='https://boards.greenhouse.io/kayak/jobs/4369305002'>Job Application for Intern at KAYAK</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -149,7 +149,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/rdi/jobs/fall-2019-web-dev-intern-angular-c-typescript-aKAZCgRJur6yCNaKld2Sj6'>[Fall 2019] Web Dev Intern (Angular/C#/Typescript) #0128 job at R&amp;D Industries, Inc. in Ames, IA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/rdi/jobs/fall-2019-web-dev-intern-angular-c-typescript-aKAZCgRJur6yCNaKld2Sj6'>[Fall 2019] Web Dev Intern (Angular/C#/Typescript) #0128 job at R&amp;D Industries, Inc. in Ames, IA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -189,7 +189,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luminus.recruitee.com/l/nl/o/internship-credit-risk-models'>
+<h5><a href='https://luminus.recruitee.com/l/nl/o/internship-credit-risk-models'>
       Internship @ Credit Risk & Models - Luminus
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -317,7 +317,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4364005002'>Job Application for Internship in Accounts Payable - Freight at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4364005002'>Job Application for Internship in Accounts Payable - Freight at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -444,7 +444,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://marketplacedistri.join.com/jobs/258350-internship-content-marketeer-eng-in-lucca-tuscany-fast-growing-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://marketplacedistri.join.com/jobs/258350-internship-content-marketeer-eng-in-lucca-tuscany-fast-growing-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
