Anitian  DevOps Engineer (Cloud Automation Engineering) | SmartRecruiters. Job @ Synedat Consulting (Frankfurt): DevOps Engin... | JOIN. Job @ Synedat Consulting (Berlin): DevOps Engineer... | JOIN. Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN. Cirrus Logic Careers - DevOps Engineer. Benefitfocus Careers - Sr. DevOps Engineer. spruceinfotech DevOps Software Engineer | SmartRecruiters. Contract DevOps Engineer | Shulman Fleming &amp; Partners.     DevOps Engineer (Software Development) at Artificial Solutions . Devoteam CI/CD Automation  (DevOps) Consultant | SmartRecruiters. Drivy - Tooling / DevOps Intern. Job Application for DevOps Engineer at Stack Sports  . Dell International Services DevOps Engineer | SmartRecruiters. DevOps Engineer | Averity. DevOps Engineer at FinTech disruptor | Averity. Infostretch Corporation Careers - DevOps Engineer. Vocera Communications, Inc. Careers - Sr. DevOps Engineer. Job Application for DevOps Engineer at SumUp. New York Media - DevOps Engineer. Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg. Burwood Group Careers - DevOps Architect. Libertex Group - Jobs: DevOps / Incident Manager (relocation to Montenegro) - Apply online. Job Application for DevOps Engineer- Database Infrastructure at Wayfair. DevOps Engineer - First West Credit Union Careers.     0723 - Sr DevOps Engineer at Workforce Source .     0722 - Sr DevOps Engineer at Workforce Source . Adevinta Devops F-H Recommandation | SmartRecruiters. Job Application for DevOps Security Engineer  at Curology. Job Application for Sr. DevOps Security Engineer  at Curology. Operations Engineer (DevOps) - Gengo - Career Page.       DevOps Engineer - DefinedCrowd     . Guidewire Software, Inc. Careers - Cloud DevOps Manager - Exton, PA. Guidewire Software, Inc. Careers - DevOps Engineer- Microservices Platform- Birmingham, AL. Job @ Oetker Digital (Berlin): DevOps Engineer | JOIN. Job @ Durststrecke (Köln): DevOps / Backend Entwic.

--- a/devops.html
+++ b/devops.html
@@ -50,7 +50,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -111,7 +111,7 @@ needs to be a hands-on developer resource not an Admin resource (release?...</p>
 engineer with a developer mindset. You will direct and communicate the long-
 term?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4346452002'>Job Application for DevOps Engineer at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4346452002'>Job Application for DevOps Engineer at SumUp</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -267,7 +267,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of DevOps Engineer at Fetchr.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/19026CFFDB'>QuadPay - Jobs: Senior Software Engineer (DevOps) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/19026CFFDB'>QuadPay - Jobs: Senior Software Engineer (DevOps) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Senior Software Engineer (DevOps) at QuadPay.</p>
 <hr/>
@@ -323,7 +323,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Canada Canada London Canada Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/leiainc/jobs/1789053'>Job Application for DevOps Engineer - LeiaLoft Digital Platform at LEIA Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/leiainc/jobs/1789053'>Job Application for DevOps Engineer - LeiaLoft Digital Platform at LEIA Inc.</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -366,7 +366,7 @@ operations teams to maintain and evolve our platforms. More specifically, as a?.
 <p>1 day ago ... Alyona has a PhD in NLP and Machine Learning with an international reputation, 
 and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/zetaglobal/job/oj7AafwU'>Zeta Global Careers - Senior DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/zetaglobal/job/oj7AafwU'>Zeta Global Careers - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... ... Fortune 1000 and Middle Market brands acquire, retain and grow customer 
 relationships through actionable data, advanced analytics and machine learning.</p>
@@ -399,7 +399,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/devopsdna/job/eb1g6degj5qgj75yjfx8wnbkkh'>Sr. DevOps Engineer | RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/devopsdna/job/eb1g6degj5qgj75yjfx8wnbkkh'>Sr. DevOps Engineer | RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -407,7 +407,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/devopsdna/job/r7jttbwaxeafih6n4f17d57q7e'>DevOps Engineer (Contract) | RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/devopsdna/job/r7jttbwaxeafih6n4f17d57q7e'>DevOps Engineer (Contract) | RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
